[package]
name = "steve"
version = "0.1.0"
edition = "2021"
description = "A work in progress minecrat clinet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic", ] }
bevy_flycam = "*"
rand = "0.8.4"
noise = "0.7.0"
futures-lite = "1.12.0"
criterion = "0.3"

[[bench]]
name = "chunk_loading"
harness = false

[profile.release]
debug = true

[package.metadata.bundle]
name = "Steve"
identifier = "com.bink.steve"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/256x256.png"]
version = "0.1.0"
resources = ["assets"]
copyright = "Copyright (c) Bink 2021. All rights reserved."
category = "Game"